test/syc/bad/usrnoarg.c
/*
 * User service routine cannot have arguments.
 */
int xusr(int foo) __attribute__((usr));
